--- a/index.html
+++ b/index.html
@@ -8,7 +8,58 @@
     <title>Calculator</title>
   </head>
   <body>
-    <section class="calculator"></section>
+    <section class="calculator">
+      <header>
+        <div class="name-theme">
+          <h2 class="title">Calculator</h2>
+
+          <div class="theme">
+            <h4>THEME</h4>
+            <div class="container_toggle">
+              <div class="container_label">
+                <label for="one" class="toggle">1</label>
+                <label for="two" class="toggle">2</label>
+                <label for="tree" class="toggle">3</label>
+              </div>
+
+              <div class="toggle_wrapper">
+                <input type="radio" class="toggle_input" name="theme" id="one" />
+                <input type="radio" class="toggle_input" name="theme" id="two" />
+                <input type="radio" class="toggle_input" name="theme" id="tree" />
+                <span aria-hidden="true" class="background"></span>
+                <span aria-hidden="true" class="button"></span>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="screen">
+          <p class="num1"></p>
+          <p class="num2"></p>
+        </div>
+      </header>
+
+      <main>
+        <button class="number">7</button>
+        <button class="number">8</button>
+        <button class="number">9</button>
+        <button class="backspace">&larr;</button>
+        <button class="number">4</button>
+        <button class="number">5</button>
+        <button class="number">6</button>
+        <button class="multiply">x</button>
+        <button class="number">1</button>
+        <button class="number">2</button>
+        <button class="number">3</button>
+        <button class="minus">-</button>
+        <button class="number">.</button>
+        <button class="number">0</button>
+        <button class="divide">/</button>
+        <button class="plus">+</button>
+        <button class="clear">CLEAR</button>
+        <button class="equal">=</button>
+      </main>
+    </section>
 
     <script src="script.js"></script>
   </body>
