--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <section class="calculator">
       <header>
         <div class="name-theme">
-          <h2 class="title">Calculator</h2>
+          <h2 class="title">calc</h2>
 
           <div class="theme">
             <h4>THEME</h4>
@@ -43,21 +43,21 @@
         <button class="number">7</button>
         <button class="number">8</button>
         <button class="number">9</button>
-        <button class="backspace">&larr;</button>
+        <button class="click backspace">&larr;</button>
         <button class="number">4</button>
         <button class="number">5</button>
         <button class="number">6</button>
-        <button class="multiply">x</button>
+        <button class="click multiply">x</button>
         <button class="number">1</button>
         <button class="number">2</button>
         <button class="number">3</button>
-        <button class="minus">-</button>
+        <button class="click minus">-</button>
         <button class="number">.</button>
         <button class="number">0</button>
-        <button class="divide">/</button>
-        <button class="plus">+</button>
-        <button class="clear">CLEAR</button>
-        <button class="equal">=</button>
+        <button class="click divide">/</button>
+        <button class="click plus">+</button>
+        <button class="click clear">CLEAR</button>
+        <button class="click equal">=</button>
       </main>
     </section>
 
