--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="/style.css" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400&family=Kdam+Thmor+Pro&display=swap" rel="stylesheet" />
     <title>Calculator</title>
   </head>
   <body>
@@ -17,9 +18,9 @@
             <h4>THEME</h4>
             <div class="container_toggle">
               <div class="container_label">
-                <label for="one" class="toggle">1</label>
-                <label for="two" class="toggle">2</label>
-                <label for="tree" class="toggle">3</label>
+                <label class="toggle" for="one">1</label>
+                <label class="toggle" for="two">2</label>
+                <label class="toggle" for="tree">3</label>
               </div>
 
               <div class="toggle_wrapper">
@@ -40,6 +41,7 @@
       </header>
 
       <main>
+        <!-- <button class="click divide">%</button> -->
         <button class="number">7</button>
         <button class="number">8</button>
         <button class="number">9</button>
@@ -47,20 +49,25 @@
         <button class="number">4</button>
         <button class="number">5</button>
         <button class="number">6</button>
-        <button class="click multiply">x</button>
+        <button class="click divide tc">/</button>
         <button class="number">1</button>
         <button class="number">2</button>
         <button class="number">3</button>
-        <button class="click minus">-</button>
+        <button class="click multiply tc">*</button>
         <button class="number">.</button>
         <button class="number">0</button>
-        <button class="click divide">/</button>
-        <button class="click plus">+</button>
+        <button class="click plus tc">+</button>
+        <button class="click minus tc">-</button>
         <button class="click clear">CLEAR</button>
+        <!-- <button class="number">000</button> -->
         <button class="click equal">=</button>
       </main>
     </section>
 
-    <script src="script.js"></script>
+    <footer>
+      <p>Concept by : <span>frontendmentor.io</span> | Creation of : <span>bapongka</span></p>
+    </footer>
+
+    <script src="/script.js"></script>
   </body>
 </html>
